--- a/Orenburg.mw
+++ b/Orenburg.mw
@@ -9,7 +9,7 @@
  | Voz' = 2021
  | Pind = 258,57
  | Fail = Orenburg collage.JPG
- | Pämez' = 
+ | Pämez' = Sergei Salmin<br />(keväz'ku 2022—)
  | Telefonkod = +7-3532-xxx-xxx
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -29,30 +29,30 @@ Lidn sijadase [[Ural (jogi)|Ural]]-jogen molembil randoil, 150 m keskmäižel ko
 Orenburg jagase kahteks ümbrikoks i nelläks administrativižeks rajonaks, kaik ned ei olgoi municipaližikš ühtnikoikš. Leninan rajon da Keskuzrajon mülüdas Suviümbrikho. Pohjoine ümbrik mülütab Dzeržinskijan i Tegimišton rajonid. Kümne žilod mülüdas Orenburgan lidnümbrikho lidnan ližaks, lidnümbrikon pind — 916,91 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 548 331 ristitud, lidnümbrikon — 563 876 ristitud. Vl 2017 kaik 579 677 ristitud eliba lidnümbrikos. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2017).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 548 331 ristitud, lidnümbrikon — 563 876 ristitud. Vl 2017 kaik 579 677 ristitud eliba lidnümbrikos. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2021).
 
 Rahvahad (lidn, enamba 0,4% vl 2010): [[venälaižed]] — 81,1%, [[totarlaižed]] — 7,6%, [[kazahlaižed]] — 2,0%, [[ukrainalaižed]] — 1,9%, [[baškiralaižed]] — 1,1%, [[armenijalaižed]] — 0,6%, [[mordvinalaižed]] — 0,5%, toižed rahvahad — 2,3%, rahvahuden ozutandata — 2,9%.
 
 Edeližed lidnümbrikon pämehed:
 * Vladimir Il'jinih (uhoku 2020 — sügüz'ku 2021),
 * Dmitrii Kulagin (tal'vku 2018 — tal'vku 2019),
-* Jevgenii Arapov<br />(reduku 2015 — reduku 2018).
+* Jevgenii Arapov (reduku 2015 — reduku 2018).
 
 == Transport ==
 Avtobusad, trolleibusad, maršruttaksid i kervačte Ural-joges päliči oma kundaližtransportaks lidnas. Vl 1876 raudte tuli lidnha, i Orenburg kändihe järedaks raudtesol'meks.
 
-Rahvahidenkeskeine civiline Jurii Gagarinan nimed ''Orenburg-Keskuzline''-lendimport<ref>[http://orenairport.ru/ Orenburg-lendimportan sait (''orenairport.ru'').] {{ref-ru}}</ref> (''REN / ОНГ'', 1 mln passažiroid vl 2021) sijadase 19 km päivnouzmha lidnaspäi. Tehtas reisid [[Uzbekistan]]ha, [[Tadžikistan]]ha, Päivlaskmaižen Azijan lebutahoiže, mugažo Venäman järedoihe lidnoihe.
+Rahvahidenkeskeine civiline Jurii Gagarinan nimed ''Orenburg-Keskuzline''-lendimport<ref>[http://oren.aero/ Orenburg-lendimportan sait (''oren.aero'').] {{ref-ru}}</ref> (''REN / ОНГ'', 1 mln passažiroid vl 2021) sijadase 19 km päivnouzmha lidnaspäi. Tehtas reisid [[Uzbekistan]]ha, [[Tadžikistan]]ha, Päivlaskmaižen Azijan lebutahoiže, mugažo Venäman järedoihe lidnoihe.
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-|
-|
+Общество взаимного страхования 2.jpg|Lidnan administracijan sauvuz (2014)
 NikolskiySoborOrenburg.jpg|Ph. Mikulai-čudonsädajan kafedraline päjumalanpert' (ortodoksine hristanuskond), vn 2009 nägu
 Russia Orenburg Karavan-Saray mosque.jpg|Istorine «Karavan-Sarai»-kompleks mečetinke, vn 2017 nägu
 Окрестности газзавода - panoramio.jpg|Orenburgan gazanümbriradai tegim vl 2011
 Orenburg State University.jpg|Orenburgan valdkundaline universitet (2009)
+Orenburg obl biblioteka.jpg|Orenburgan agjan tedokirjišt N. Krupskajan nimed (2010)
 4 драмтеатр.JPG|Orenburgan agjan dramteatr M. Gor'kijan nimed (2007)
-|
+Ледовый дворец Звездный г.Оренбург.JPG|«Zvözdnii»-jäpert'kulu (2012, ''Tähthakaz'')
 Orenburgskiy r-n, Orenburgskaya oblast', Russia - panoramio (3).jpg|Orenburg-lendimportan terminal vl 2010
 Russia Orenburg railway station.jpg|Orenburg-päraudtestancijan sauvuz vl 2017
 </gallery>
