--- a/Orenburg.mw
+++ b/Orenburg.mw
@@ -14,6 +14,7 @@
  | Avtokod = 56
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
+[[Fail:Районы Оренбурга.png|thumb|left|250px|Orenburg-lidnan rajonad ümbrikoiš:<br/>Pohjoine ümbrik:<br/>{{legend|red|Dzeržinskijan rajon}} {{legend|fuchsia|Tegimištoline rajon}} Suviümbrik:<br/>{{legend|yellow|Keskuzrajon}} {{legend|orange|Leninan rajon}}]]
 '''Orenburg''' ({{lang-ru|Оренбург}}, {{lang-tt|Ырынбур}}) om lidn [[Venäma]]n suvipäivlaskmas. Se om [[Orenburgan agj]]an administrativine keskuz da kaikiš suremb lidn i lidnümbrik.
 
 == Istorii ==
@@ -26,7 +27,7 @@ Orenburgan ižandusen päsarakod oma [[londuseline gaz|londuseližen gazan]] sam
 == Geografijan andmused ==
 Lidn sijadase [[Ural (jogi)|Ural]]-jogen molembil randoil, 150 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Moskv]]hasai om 1432 km lodeheze avtotedme. Lähembaine lidn om [[Sol'-Ileck]] 75 km suvhe raudtel vai avtol.
 
-Orenburg jagase kahteks ümbrikoks i nelläks administrativižeks rajonaks, kaik ned ei olgoi municipaližikš ühtnikoikš. Leninan rajon da Keskuzrajon mülüdas Suviümbrikho. Pohjoine ümbrik mülütab Dzeržinskijan i Tegimišton rajonid. Kümne žilod mülüdas Orenburgan lidnümbrikho lidnan ližaks, lidnümbrikon pind — 916,91 km².
+Orenburg jagase kahteks ümbrikoks i nelläks administrativižeks rajonaks, kaik ned ei olgoi municipaližikš ühtnikoikš. Leninan rajon da Keskuzrajon mülüdas Suviümbrikho. Pohjoine ümbrik mülütab Dzeržinskijan i Tegimištoližen rajonid. Kümne žilod mülüdas Orenburgan lidnümbrikho lidnan ližaks, lidnümbrikon pind — 916,91 km².
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 548 331 ristitud, lidnümbrikon — 563 876 ristitud. Vl 2017 kaik 579 677 ristitud eliba lidnümbrikos. Kaikiš suremb lidnan ristitišt om nügüd' (vl 2021).
