--- a/Adams_Brajan.mw
+++ b/Adams_Brajan.mw
@@ -27,6 +27,10 @@ Pajatai ei ole nainu. Vl 2011 Brajan kändihe tataks, Mirabella Banni-tütär om
 * 2008 — ''11''
 * 2014 — ''Tracks of My Years''
 * 2015 — ''Get Up''
+* 2019 — ''Shine a Light''
+* 2022 — ''Pretty Woman - The Musical''
+* 2022 — ''So Happy It Hurts''
+* 2022 — ''Classic''
 
 == Mel'hetartujad faktad ==
 * Brajan eläb koumepertin, kodid oma Vankuveras, Parižas da Londonas.
