*Empty MediaWiki Message*

--- a/Žirinovskii_Vladimir.mw
+++ b/Žirinovskii_Vladimir.mw
@@ -2,7 +2,7 @@
 | изображение = Wladimir Schirinowski cropped.jpg
 | описание изображения = Vladimir Žirinovskii vn 2009 sügüz'kus
 }}
-'''Vladimir Vol'fovič Žirinovskii''' ({{lang-ru|Владимир Вольфович Жириновский}}; sünd. [[25. sulaku]] [[1946]], [[Alma-At]], [[Kazahstan|Kazahstanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma]]n valdkundmez', [[Valdkundaline Dum|Valdkundaližen Duman]] varaezimez' (2000-2011), [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii da ezimez', [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] ühtnii. Viž kerdad ühtni Venäman Prezidentan valičendoihe ([[1991. voz'|1991]], [[1996. voz'|1996]], [[2000. voz'|2000]], [[2008. voz'|2008]], [[2012. voz'|2012]]).
+'''Vladimir Vol'fovič Žirinovskii''' ({{lang-ru|Владимир Вольфович Жириновский}}; sünd. [[25. sulaku]] [[1946]], [[Alma-At]], [[Kazahstan|Kazahstanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Venäma]]n valdkundmez', [[Valdkundaline Dum|Valdkundaližen Duman]] varaezimez' (2000-2011), [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii da ezimez', [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] ühtnii. Viž kerdad ühtni Venäman Prezidentan valičendoihe ([[1991. voz'|1991]], [[1996. voz'|1996]], [[2000. voz'|2000]], [[2008. voz'|2008]], [[2012. voz'|2012]]).
 
 == Homaičendad ==
 <references/>
