--- a/Žirinovskii_Vladimir.mw
+++ b/Žirinovskii_Vladimir.mw
@@ -2,9 +2,9 @@
 | изображение = Wladimir Schirinowski cropped.jpg
 | описание изображения = Vladimir Žirinovskii vn 2009 sügüz'kus
 }}
-'''Vladimir Vol'fovič Žirinovskii''' ({{lang-ru|Владимир Вольфович Жириновский}}; sünd. [[25. sulaku]] [[1946]], [[Alma-At]], [[Kazahstan|Kazahstanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[6. sulaku]] [[2022]], [[Moskv]], [[Venäma|Venälaine Federacii]]) oli [[Venäma]]n tetab valdkundmez'.
+'''Vladimir Vol'fovič Žirinovskii''' ({{lang-ru|Владимир Вольфович Жириновский}}; sünd. [[25. sulaku]] [[1946]], [[Alma-At]], [[Kazahstan|Kazahstanan NST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[6. sulaku]] [[2022]], [[Moskv]], [[Venäma|Venälaine Federacii]]) oli tetab nevondkundaline i venämalaine valdkundmez'.
 
-Mez' radoi [[Valdkundaline Dum|Valdkundaližen Duman]] varaezimehen (2000−2011). [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii da ezimez' ičeze surmhasai, [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] ühtnii. Žirinovskii ühtni Venäman Prezidentan valičendoihe viž kerdad ([[1991. voz'|1991]], [[1996. voz'|1996]], [[2000. voz'|2000]], [[2008. voz'|2008]], [[2012. voz'|2012]]).
+Mez' radoi [[Valdkundaline Dum|Valdkundaližen Duman]] varaezimehen (2000−2011). [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii da ezimez' ičeze surmhasai, [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] delegat (1996−2008). Žirinovskii ühtni Venäman Prezidentan valičendoihe kuz' kerdad ([[1991. voz'|1991]], [[1996. voz'|1996]], [[2000. voz'|2000]], [[2008. voz'|2008]], [[2012. voz'|2012]], [[2018. voz'|2018]]).
 
 == Homaičendad ==
 <references/>
