*Empty MediaWiki Message*

--- a/Žirinovskii_Vladimir.mw
+++ b/Žirinovskii_Vladimir.mw
@@ -7,7 +7,7 @@
 Mez' radoi [[Valdkundaline Dum|Valdkundaližen Duman]] varaezimehen (2000−2011). [[Venäman liberaliž-demokratine partii|Venäman liberaliž-demokratižen partijan]] (VLDP) alusenpanii da ezimez' ičeze surmhasai, [[Evropan Ministrišton parlamentine assamblei|Evropan Ministrišton parlamentižen assamblejan]] delegat (1996−2008). Žirinovskii ühtni Venäman Prezidentan valičendoihe kuz' kerdad ([[1991. voz'|1991]], [[1996. voz'|1996]], [[2000. voz'|2000]], [[2008. voz'|2008]], [[2012. voz'|2012]], [[2018. voz'|2018]]).
 
 == Biografii ==
-Tuleban aigan politikanmez' openui i lopi opendust Almatin keskškolas nomer 25 Dzeržinskijan nimed. Vll 1964−1970 Žirinovskii sai üläopendust Päivnouzmman keliden institutas (Azijan i Afrikan maiden institut vspäi 1972, [[Moskvan valdkundaline universitet|Moskvan valdkundaližen universitetan]] pala) «Turkan kel' da literatur». Vll 1965−1967 openui Marksizman-leninizman universitetas mugažo, rahvahidenkeskeižiden kosketusiden fakul'tetas. Institutan jäl'ghe služi armijas. Vll 1972−1977 mez' openui MVU:s toižen kerdan, sen ehtaližes palakundas, i sai juridišt opendust.
+Tuleban aigan politikanmez' openui i lopi opendust Almatin keskškolas nomer 25 Dzeržinskijan nimed. Vll 1964−1970 Žirinovskii sai üläopendust Päivnouzmman keliden institutas (Azijan i Afrikan maiden institut vspäi 1972, [[Moskvan valdkundaline universitet|Moskvan valdkundaližen universitetan]] pala) «Turkan kel' da literatur»-specializacijanke. Vll 1965−1967 openui Marksizman-leninizman universitetas mugažo, rahvahidenkeskeižiden kosketusiden fakul'tetas. Institutan jäl'ghe služi armijas. Vll 1972−1977 mez' openui MVU:s toižen kerdan, sen ehtaližes palakundas, i sai juridišt opendust.
 
 Žirinovskii zavodi oficialižen politižen radmižen vl 1988. Mez' mahtoi pagišta nelläl kelel venäkelen ližaks: anglijan, francijan, saksan i turkan kelil.
 
