--- a/La-Rošel'.mw
+++ b/La-Rošel'.mw
@@ -15,8 +15,12 @@
 }}
 '''La-Rošel'''' ({{lang-fr|La Rochelle}}) om lidn da kommun [[Francii|Francijan]] päivlaskmas. Mülüb [[Uz' Akvitanii]]-regionha.
 
-Eländpunktan aluz om pandud 10. voz'sadal. [[Tamplieroiden orden]] sauvoi järedan meriportan 12.-13. voz'sadoil, torguihe vinad da solad. [[Toine mail'man soda|Suren sodan]] aigan se oli Francijan jäl'gmäine päzutadud nacistoišpäi lidn (8. semendku 1945).
+== Istorii ==
+Eländpunktan aluz om pandud 10. voz'sadal. [[Tamplieroiden orden]] sauvoi järedan meriportan 12.-13. voz'sadoil, torguihe vinad da solad. Äi keskaigaližid sauvusid om kaičenus lidnas. Se oli znamasine port [[kolonializm]]an voz'sadoiden aigan.
 
+[[Toine mail'man soda|Suren sodan]] aigan se oli Francijan jäl'gmäine päzutadud nacistoišpäi lidn (8. semendku 1945).
+
+== Geografijan andmused ==
 Lidn da port sijadase [[Biskaine laht|Biskaižen lahten]] randal, 0..28 m korktusil, 4 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]hasai om 480 km pohjoižpäivnouzmha.
 
 Vl 2010 lidnan eläjiden lugu oli 74 880 ristitud. Kaikiš suremb ristitišt oli 79 757 eläjad vl 1975.
