--- a/Baiburt_(lidn).mw
+++ b/Baiburt_(lidn).mw
@@ -21,7 +21,9 @@ Eländpunkt mainitase ezmäižen kerdan kuti [[Sur' Armenii|Suren Armenijan]] Ba
 Baiburt om agjan tegimišton da torguindan keskuz. Živatvodind i meden tehmine oma agjas. Baiburtan universitet radab vspäi 2008 (5,3 tuhad üläopenikoid).
 
 == Geografijan andmused ==
-Lidn sijadase [[Čoroh]]-jogen randoil ({{lang-tr|Çoruh nehri}}, lankteb [[Mustmeri|Mustmerhe]]), 1555 m ü.m.t. keskmäižel korktusel. Om ümbärtud korktoil mägil, [[hobed]]an, [[vas'k]]en, [[hahktin]]an i [[cink]]an samižen kaivusil.
+Lidn sijadase [[Čoroh]]-jogen randoil ({{lang-tr|Çoruh nehri}}, lankteb [[Mustmeri|Mustmerhe]]), 1550 m ü.m.t. keskmäižel korktusel. Om ümbärtud korktoil mägil, [[hobed]]an, [[vas'k]]en, [[hahktin]]an i [[cink]]an samižen kaivusil.
+
+Klimat om [[ven vö|ven]] kontinentaline. Voden keskmäine lämuz om +7,5 C°. Paneb sadegid 475 mm vodes, voib panda lunt tal'vel ühthe metrhasai kortte.
 
 Vl 2011 lidnan eläjiden lugu oli 35 654 ristitud.
 
