--- a/Aš_(lidn,_Venäma).mw
+++ b/Aš_(lidn,_Venäma).mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Aš<br />Аша
- | Lidnanznam = Coat of Arms of Asha (Chelyabinsk oblast).png
+ | Lidnanznam = Asha COA (2007).jpg
  | Flag = Flag of Asha (Chelyabinsk oblast) (2007).png
  | Lidnanznam text = Ašan lidnanznam
  | Flag text = Ašan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 29,946
- | Voz' = 2017
+ | Eläjiden lugu = 29,066
+ | Voz' = 2021
  | Pind = 52.4
  | Fail = Asha.jpg
  | Pämez' = Il'ja Lutkov<br />(keväz'ku 2010—)
@@ -20,7 +20,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1898 kuti žilo udenno [[kaugedraud]]an Aša-Balašovo-tegimenno, nimitihe jogen mödhe. Radnikžilo sai lidnan statusad vn 1933 20. päiväl kezakud.
 
-Aš šingotase raudan metallurgijan tegimel, mugažo lämuzarmaturan i mechimine tegimed ratas lidnas.
+Aš šingotase [[raud]]an [[metallurgii|metallurgijan]] tegimel, mugažo lämuzarmaturan i mechimine tegimed ratas lidnas.
 
 == Geografijan andmused ==
 Lidn sijadase rajonan suvipäivlaskmaiženno röunanno, Sim-jogen oiktal randal tobjimalaz ({{lang-ba|Эҫем}} 239 km pitte, [[Kam (jogi)|Kaman]] hurapol'ne bassein), 140 m ü.m.t. keskmäižel korktusel. Aš-jogi ({{lang-ru|Аша}} 59 km pitte) lankteb Simha oiktalpäi lidnas. [[Baškortostan]] om ani päivlaskmha lidnaspäi Aš-jogen vastrandal. Matkad [[Čeläbinsk]]hasai om 263 km päivnouzmha orhal, 333 km avtotedme vai 360 km raudtedme. Lähembaižed lidnad oma [[Sim (lidn, Čeläbinskan agj)|Sim-lidn]] päivnouzmha i [[Min'jar]] pohjoižpäivnouzmha.
@@ -33,6 +33,14 @@ Aš om lidnankundan üks'jäine eländpunkt. Lidnankundan pind om 549,32 km².
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 31 881 ristitud, rajonan pol'. Kaikiš suremb lidnan ristitišt oli 36..39 tuhad eläjid vll 1959−1998 (39 100 rist. vl 1992).
 
 Professionaližen opendusen aluzkund om Ašan industrialine tehnikum.<ref>[http://аит74.рф/ Ašan industrialižen tehnikuman sait (''аит74.рф'').] {{ref-ru}} </ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Аша памятник Умову А.И. - panoramio.jpg|Muštnik A. Umovale i fontan (2008)
+Церковь Казанской иконы Божьей Матери в городе Аша.jpg|Jumalanmaman Kazanin jumalaižen jumalanpert', vn 2020 nägu (avaitihe vl 2005)
+Asha2.jpg|Lidnan puine pertišt (2007)
+Станция Аша (вокзал, перрон).jpg|Aš-päraudtestancijan sauvused vl 2021
+</gallery>
 
 == Homaičendad ==
 <references />
