*Empty MediaWiki Message*

--- a/Bakal.mw
+++ b/Bakal.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Bakalan lidnanznam
  | Flag text = Bakalan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 19,590
- | Voz' = 2017
+ | Eläjiden lugu = 18,706
+ | Voz' = 2020
  | Pind = 50
  | Fail = Bakal - sign of town.jpg
  | Pämez' = Andrei Zaročincev<br />(sulaku 2017—)
@@ -29,7 +29,7 @@ Ural-trassan «[[Uf]] — Čeläbinsk»-pala mäneb 7 km suvipäivnouzmha lidnas
 Nell' pen't žilod mülüdas lidnankundha Bakalan ližaks, sidä kesken kaks' oma kaikenaigaižeta ristitištota.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 940 ristitud, lidnankundan — 21 118 ristitud, rajonan nelländez. Kaikiš suremb lidnan ristitišt oli 29..31 tuhad eläjid vll 1959−1967 (31 tuh. rist. vl 1967). Vl 2017 kaik 19 782 eläjad oli lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 20 940 ristitud, lidnankundan — 21 118 ristitud, rajonan nelländez. Kaikiš suremb lidnan ristitišt oli 29..31 tuhad eläjid vll 1959−1967 (31 tuh. rist. vl 1967). Vl 2017 kaik 19 590 eläjad oli lidnas i 19 782 ristitud kaikes lidnankundas.
 
 Rahvahad (2010): [[venälaižed]] — 87,3%, [[totarlaižed]] — 6,4%, [[baškiralaižed]] — 3,4%, [[ukrainalaižed]] — 1,0%, toižed rahvahad — 1,9%.
 
