--- a/Čebarkul'_(lidn).mw
+++ b/Čebarkul'_(lidn).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Čebarkulin lidnanznam
  | Flag text = Čebarkulin flag
  | Valdkund = Venäma
- | Eläjiden lugu = 40,931
- | Voz' = 2019-01-01
+ | Eläjiden lugu = 41,310
+ | Voz' = 2020
  | Pind = 71.13
- | Fail = Вид 4 - panoramio.jpg
- | Pämez' = Sergei Kovrigin<br />(tal'vku 2015—)
+ | Fail = Город Чебаркуль с высоты птичьего полета.jpg
+ | Pämez' = Svetlana Vinogradova<br />(keväz'ku 2019—)
  | Telefonkod = +7-35168-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -29,19 +29,23 @@ Lidn sijadase [[Uralmäged|Suviuralan]] Il'menan mägisel'gan päivnouzmaižel p
 Čebarkul' om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 42 844 ristitud. Kaikiš suremb lidnan ristitišt oli 50..51 tuhad eläjid vll 1989−2001 (51 800 rist. vl 1996). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen jumalanpert' (1745, udessündutadud vl 2007) pühäpäivän školanke i [[islam]]an «Ihlas»-pühäpert' (vspäi 2009) oma avaitud lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 42 844 ristitud. Kaikiš suremb lidnan ristitišt oli 50..51 tuhad eläjid vll 1989−2001 (51 800 rist. vl 1996).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen jumalanpert' (1745, om udessündutadud vl 2007) pühäpäivän školanke i [[islam]]an «Ihlas»-pühäpert' (vspäi 2009) oma avaitud lidnas.
 
 Rahvahad (2010): [[venälaižed]] — 90,2%, [[totarlaižed]] — 2,7%, [[baškiralaižed]] — 2,2%, [[ukrainalaižed]] — 1,7%, toižed rahvahad — 3,2%.
 
 Professionaližen opendusen aluzkund om Čebarkulin professionaline tehnikum.<ref>[http://www.chpt.edusite.ru/ Čebarkulin professionaližen tehnikuman sait (''chpt.edusite.ru'').] {{ref-ru}} ''(+ äikel'ne avtomatine känduz)''</ref>
 
+Edeline lidnümbrikon pämez' om Sergei Kovrigin (tal'vku 2015 — keväz'ku 2019).
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Chebarkul, Chelyabinsk Oblast, Russia - panoramio (1).jpg|Lämoipalopalakund
-Церковь город Чебаркуль.jpg|Jumalanpert'
-Chebarkul garnizon (T-34) NEW 2016.jpg|Tankdivizijan sodagarnizon
-Звезда Чебаркуль Стадион.JPG|«Uraline tähtaz»-jäpert'kulu
-Станция Чебаркуль.jpg|Čebarkul'-päraudtestancii
+Chebarkul, Chelyabinsk Oblast, Russia - panoramio (1).jpg|Lämoipalopalakund (2009)
+Церковь город Чебаркуль.jpg|Spasan Toižetamižen jumalanpert', vn 2012 nägu
+Chebarkul garnizon (T-34) NEW 2016.jpg|Tankdivizijan sodagarnizon vl 2016
+Звезда Чебаркуль Стадион.JPG|«Uraline tähtaz»-jäpert'kulu (2014)
+Станция Чебаркуль.jpg|Čebarkul'-päraudtestancii vl 2010
 </gallery>
 
 == Homaičendad ==
