--- a/Üläural'sk.mw
+++ b/Üläural'sk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Üläural'sk<br />Верхнеуральск
- | Lidnanznam = Coat of Arms of Verkhneuralsk (Chelyabinsk oblast).png
+ | Lidnanznam = Verkhneuralsk COA.gif
  | Flag = Flag of Verkhneuralsk (Chelyabinsk oblast).png
  | Lidnanznam text = Üläural'skan lidnanznam
  | Flag text = Üläural'skan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 9,312
- | Voz' = 2017
+ | Eläjiden lugu = 9,282
+ | Voz' = 2020
  | Pind = 50.18
  | Fail = Дом купца Терентьева (г. Верхнеуральск, ул. Еремина, 39).jpg
- | Pämez' = Väčeslav Kolonük<br />(keväz'ku 2010—)
+ | Pämez' = Sergei Tkačov<br />(keväz'ku 2022—,<br />''velgusentäutai'')
  | Telefonkod = +7-35143-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -31,7 +31,9 @@ Vl 1939 lidnan ristitišt oli 11 200 eläjad. Vn 2010 Venäman rahvahanlugemiže
 
 Rahvahad (2010): [[venälaižed]] — 89,4%, [[totarlaižed]] — 3,0%, [[baškiralaižed]] — 1,3%, [[ukrainalaižed]] — 1,1%, toižed rahvahad — 5,2%.
 
-Professionaližen opendusen aluzkund om Üläural'skan agrotehnologine tehnikum - kozakoiden kadetkorpus.<ref>[http://vatt-kkk.ucoz.net/ Üläural'skan agrotehnologižen tehnikuman sait (''vatt-kkk.ucoz.net'').] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+Professionaližen opendusen aluzkund om Üläural'skan agrotehnologine tehnikum — kozakoiden kadetkorpus.<ref>[http://vatt-kkk.ucoz.net/ Üläural'skan agrotehnologižen tehnikuman sait (''vatt-kkk.ucoz.net'').] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+
+Edeližed lidnan pämehed oma Aleksandr Lisov (kül'mku 2019 — keväz'ku 2022, ''Александр Лысов'') i Väčeslav Kolonük (keväz'ku 2010 — reduku 2019).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
