--- a/Üläufalei.mw
+++ b/Üläufalei.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Üläufalein lidnanznam
  | Flag text = Üläufalein flag
  | Valdkund = Venäma
- | Eläjiden lugu = 26,884
- | Voz' = 2019-01-01
+ | Eläjiden lugu = 26,716
+ | Voz' = 2020
  | Pind = 65
  | Fail = Верхнеуфалейский пруд f002.jpg
- | Pämez' = Vera Uskova<br />(kül'mku 2015—)
+ | Pämez' = Sergei Tarasov<br />(viluku 2021—)
  | Telefonkod = +7-35164-xx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -29,11 +29,22 @@ Lidn sijadase [[Uralmäged|Keskuralan]] Ufalein mägisel'gan päivnouzmaižil pa
 Alaufalei-žilo (2443 rist. vl 2010), Čeremšank-žilo (1025 rist. vl 2010), völ 8 žilod, 2 žilod raudtestancijanno, 1 külä i 1 futor mülüdas lidnümbrikho Üläufalein ližaks. Lidnümbrikon pind — 1613,08 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 30 481 ristitud, lidnümbrikon — 35 006 ristitud. Kaikiš suremb lidnan ristitišt oli 36..40 tuhad eläjid vll 1959−1998 (40 tuh. rist. vl 1967 i 40 061 rist. vl 1989). Vl 2017 kaik 31 769 ristitud elihe lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 30 481 ristitud, lidnümbrikon — 35 006 ristitud. Kaikiš suremb lidnan ristitišt oli 36..40 tuhad eläjid vll 1959−1998 (40 tuh. rist. vl 1967 i 40 061 rist. vl 1989). Vl 2017 kaik 27 879 ristitud elihe lidnas i 31 769 ristitud kaikes lidnümbrikos.
 
 Rahvahad (2010): [[venälaižed]] — 85,6%, [[totarlaižed]] — 6,0%, [[baškiralaižed]] — 5,2%, toižed rahvahad — 3,2%.
 
 Professionaližen opendusen aluzkund om Kaslin tegimištoliž-gumanitarižen tehnikuman Üläufalein filial.
+
+Edeline lidnümbrikon pämez' om Vera Uskova (kül'mku 2015 — viluku 2021).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Храм Рождества Пресвятой Богородицы f002.jpg|Pühän Jumalanmaman Sündundan jumalanpert', vn 2018 nägu
+Уфалейский никелевый завод f002.jpg|«Ufaleinikel'»-tegim vl 2018
+Marble canyon in Verkhny Ufaley.jpg|Mramorkar'jer vl 2006
+Верхний Уфалей, здание заводского госпиталя.JPG|Lidnan keskuzline läžundkodi (2014)
+Вокзал станции Верхний Уфалей f003.jpg|Üläufalei-päraudtestancijan sauvuz vl 2018
+</gallery>
 
 == Homaičendad ==
 <references />
