/* Mägehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Mägi.mw
+++ b/Mägi.mw
@@ -16,8 +16,9 @@ Jagadas mägid korktusen mödhe:
 * madalad, niiden relätivine korktuz om 500..800 metrad, absolütižikš tuhaze metrhasai kortte.
 
 == Mägehe sidodud vepsän muštatišed da ozoitesed ==
-=== Muštatiž ===
+=== Muštatišed ===
 <blockquote>
+* ''Abuta mehele mäges, a lapsele künduses.''
 * ''Mägelpäi palab päiv, Änižespäi vilu päiv.''
 </blockquote>
 
