--- a/Laps'.mw
+++ b/Laps'.mw
@@ -10,6 +10,7 @@
 == Lapsihe sidodud vepsän muštatišed ==
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 22−25. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
+* ''Abuta mehele mäges, a lapsele künduses.''
 * ''Anda, Jumal, laps, a lapsele mel't.''
 * ''Čapa hot' mitte sorm — kaikutte om kibed.'' (lapsiš)
 * ''Ei ole sur' mez', da kaikid vanhemboičeb.'' (lapses)
