--- a/Mez'.mw
+++ b/Mez'.mw
@@ -14,6 +14,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 == Meheze sidodud vepsän muštatišed ==
 Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
+* ''Abuta mehele mäges, a lapsele künduses.''
 * ''Ak da lehm, mužik da hebo.''
 * ''Ak mužikatoi — kutnä haumeh aidatoi.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
