--- a/Jogi.mw
+++ b/Jogi.mw
@@ -15,7 +15,13 @@ Jogen suruded: piduz (km), basseinan pind (km²), sekundine (m³/s) i vozne valu
 == Kävutand ==
 Nened otandad kävutamižhe oleskeldas jogel: kävutand [[reskvezi|reskvedeks]], [[kalanpüdand]] da [[kalankazvatuz]], [[elektruz|elektrusen]] da toižen vägen ([[vezimellic]]) samine, [[jogitransport|jogilikkuimed]] da [[kanal]]ad, [[pöud (maižanduz)|pöudoiden]] kastelend, rajod valdkundoiden keskes.
 
-== Jogehe sidodud vepsän ozoitez ==
+== Jogehe sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatiž ===
+<blockquote>
+* ''Paremb om oja tugeta mi jogi.''
+</blockquote>
+
+=== Ozoitez ===
 <blockquote>
 * Rusked korend päliči joges rippub. (jumalanbembel')
 </blockquote>
