--- a/Liha.mw
+++ b/Liha.mw
@@ -16,6 +16,7 @@ Lihan vozne tehmine ühtele hengele om 33,2 kg, valdkundad-liderad da päeksport
 
 == Lihaze sidodud vepsän muštatišed ==
 <blockquote>
+* ''Hulas padaspäi kädel lihad ed veda.''
 * ''Lingaha lud, ka i liha linneb.''
 * ''Miš oma lud, ka sid' liha-ki.''
 * ''Veraz liha magedamb.''
