/* Nagrheze sidodud vepsän muštatiž da ozoitez */ +

--- a/Nagriž.mw
+++ b/Nagriž.mw
@@ -43,10 +43,12 @@ Nagrhen sötmižsortad nimitasoiš [[turneps]]aks.
 * ''Paštikaine, paštikaz'' — pašttud nagriž.
 * ''Repoi'' — pašttud vai hauttud nagrhen südäivezi, vai vas nagrhespäi.
 
-== Nagrheze sidodud vepsän muštatiž da ozoitez ==
-=== Muštatiž ===
+== Nagrheze sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
+* ''Ala nagra nagrišt, om ret'kad kodiš.''
 * ''Ei karged nagriž ezmäižeks hapne.''
+* ''Sö nagriž sügüzel, a ak pidä nores.''
 </blockquote>
 
 === Ozoitez ===
