--- a/Ust'-Katav.mw
+++ b/Ust'-Katav.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Ust'-Katavan lidnanznam
  | Flag text = Ust'-Katavan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 22,042
- | Voz' = 2019
+ | Eläjiden lugu = 21,803
+ | Voz' = 2020
  | Pind = 27.45
  | Fail = Ust-Katav from Katav pond.JPG
  | Pämez' = Sergei Semkov<br />(tal'vku 2015—)
@@ -29,11 +29,19 @@ Lidn sijadase ümbrikon suvipäivlaskmas, [[Jurüzan' (jogi)|Jurüzan']]-jogen m
 Seičeme muite žilod, kaks' žilod raudtestancijanno i üks' külä mülüdas lidnümbrikho Ust'-Katavan ližaks. Lidnümbrikon pind — 675 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 580 ristitud, lidnümbrikon — 26 917 ristitud. Kaikiš suremb lidnan ristitišt oli 31 400 eläjad vl 1992. Kaik 24 922 ristitud elädas lidnümbrikos (2019).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 580 ristitud, lidnümbrikon — 26 917 ristitud. Kaikiš suremb lidnan ristitišt oli 31 400 eläjad vl 1992. Vl 2019 ühthemänho 22 042 ristitud elihe lidnas i 24 922 ristitud kaikes lidnümbrikos.
 
 Rahvahad (2010): [[venälaižed]] — 87,0%, [[baškiralaižed]] — 7,2%, [[totarlaižed]] — 3,6%, toižed rahvahad — 2,2%.
 
 Professionaližen opendusen aluzkund om Ust'-Katavan industrialiž-tehnologine tehnikum.<ref>[http://ukitt.ru/ Ust'-Katavan industrialiž-tehnologižen tehnikuman sait (''ukitt.ru'').] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ust-Katav. Bryansk bridge.JPG|Bränskan sild Jurüzaniš päliči vl 2012
+1й 71-623 для Перми на УКВЗ !!!!!!!!!!!.jpg|Vaumitud tondaks Permihe ezmäine 71-623-tramvai raudteil Ust'-Katavan vagonansauvomižen tegimenno
+Дворец культуры вагоностроителей им. Т.Я. Белоконева.jpg|Vagonansauvojiden kul'turkeskuz T. Belokonevan nimed (2010)
+Станция Усть-Катав (вокзал),ii.jpg|Ust'-Katav-päraudtestancijan sauvuz vl 2021
+</gallery>
 
 == Homaičendad ==
 <references />
