*Empty MediaWiki Message*

--- a/Tröhgornii.mw
+++ b/Tröhgornii.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Tröhgornijan lidnanznam
  | Flag text = Tröhgornijan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 32,613
- | Voz' = 2019-01-01
+ | Eläjiden lugu = 32,665
+ | Voz' = 2020
  | Pind = 7
  | Fail =
  | Pämez' = Jevgenii Sičov<br />(sügüz'ku 2014—.<br />''Евгений Сычёв'')
