--- a/Troick_(Čeläbinskan_agj).mw
+++ b/Troick_(Čeläbinskan_agj).mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Troickan lidnanznam (Čeläbinskan agj)
  | Flag text = Troickan flag (Čeläbinskan agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 73,152
- | Voz' = 2019
+ | Eläjiden lugu = 73,421
+ | Voz' = 2020
  | Pind = 139.15
- | Fail = Troitsk 01.jpg
+ | Fail = Река Уй, г. Троицк.jpg
  | Pämez' = Aleksandr Vinogradov<br />(viluku 2014—)
  | Telefonkod = +7-35163-xx-xxx
  | Avtokod = 74. 174
@@ -33,6 +33,15 @@ Vl 1939 kaik 47 tuhad ristituid elihe lidnas. Vn 2010 Venäman rahvahanlugemiže
 Rahvahad (2010): [[venälaižed]] — 82,5%, [[totarlaižed]] — 7,2%, [[ukrainalaižed]] — 3%, [[kazahlaižed]] — 2%, toižed rahvahad — 5,3%.
 
 Professionaližen opendusen aluzkundad oma Troickan tehnologine tehnikum<ref>[http://ttt.troitsk.su/ Troickan tehnologižen tehnikuman sait (''ttt.troitsk.su'').] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>, Troickan agrarine tehnikum, i koume kolledžad: aviacijan tehnine, pedagogine, medicinine, mugažo Čeläbinskan valdkundaližen universitetan filial radab lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация обзор площади, отредактир, нокиа. 19.09.2017.jpg|Lidnan administracijan sauvuz Klimovan irdal (2017)
+Svyato-troitskiy sobor.jpg|Pühän Stroican (Uin) kafedraline päjumalanpert', vn 2007 nägu
+Троицкая ГРЭС..jpg|Troickan GRES vl 2018
+Troitsk hotel.jpg|«Central'naja»-adivpert' (2014, ''Keskuzline'', om saudud Bašarov-torgovanan ohjandusen al vl 1907)
+Вокзал станции Троицк.jpg|Troick-päraudtestancijan sauvuz vl 2016
+</gallery>
 
 == Homaičendad ==
 <references />
