--- a/Lämoi.mw
+++ b/Lämoi.mw
@@ -23,6 +23,7 @@ Eziauguižešti ottihe lämoid kävutamižhe savun samižen täht lendajid gaved
 * ''Lämoid savuta ei olele.''
 * ''Palanu lämoid ei varaida, a upnu — vet.''
 * ''Raud ei pala lämoiš.''
+* ''Vargastai vargastab, ka seinäd jätab, a lämoi nimidä ei jäta.''
 </blockquote>
 
 ;Ozoitez
