/* Pajoho sidodud vepsän muštatišed */

--- a/Pajo.mw
+++ b/Pajo.mw
@@ -16,7 +16,7 @@ Pajo voib edestadas kut ühtel [[pajatai|pajatajal]], muga [[hor]]al-ki. Pajatad
 * ''Pahal lindul i pajod pahad oma.''
 * ''Pajata hot' karzn'as ka kuldas, voika hot' pertin päl ka ei kulgoi.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
-* ''Pajos tozi, a sarnoiš kelastuz.''
+* ''Pajos — tozi, a sarnoiš — kelastuz.''
 </blockquote>
 
 == Homaičendad ==
