--- a/Koiv.mw
+++ b/Koiv.mw
@@ -30,16 +30,17 @@ Erased erikod:
 * ''Betula pendula'' vai ''Betula verrucosa'' — [[Raudkoiv]]
 * ''Betula pubescens'' — [[Kurdiž koiv]]
 
-== Koivuhu sidotud vepsän tärtused ==
+== Koivhu sidodud vepsän tärtused ==
 * ''Iver'' — koivun jur'.
 * ''Koivik, koivišt, koivžom'' — koivuine mec.
 * ''Kurč'' — koivun kuhm.
 * ''[[Toh']]'' — koivun kor'.
 
-== Koivuhu sidotud vepsän muštatišed ==
+== Koivhu sidodud vepsän muštatišed ==
 <blockquote>
 * ''Dölota koivuine ei koverdelde.''
-* ''Jotta  koivuižel  čajul. (aznoita)''
+* ''Jotta  koivuižel  čajul.'' (aznoita)
+* ''Koivuine om kandoine, ka koivuine i vezaine.''
 * ''Koivuižes kandos habašt vezod ei kazva.''
 </blockquote>
 
