/* Mecha sidodud vepsän muštatišed da ozoitesed */ +

--- a/Mec.mw
+++ b/Mec.mw
@@ -39,6 +39,7 @@
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Kut mecha, muga i mecaspäi.''
 * ''Kut mecha kidastad, muga mec-ki vastustab.''
+* ''Mecas pu-ki kuleb i nägeb.''
 * ''Mecas pud ei olgoi ühtejiččed, muga i rahvaz.''
 * ''Mechapäi ei ajagoi lapsenkacujad ecmaha.''
 * ''Min edahamb mecha, sen enamb haugoid.''
