/* Mägehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Mägi.mw
+++ b/Mägi.mw
@@ -19,6 +19,7 @@ Jagadas mägid korktusen mödhe:
 === Muštatišed ===
 <blockquote>
 * ''Abuta mehele mäges, a lapsele künduses.''
+* ''Kus oma mäged, ka sigä orgod-ki.''
 * ''Mägelpäi palab päiv, Änižespäi vilu päiv.''
 </blockquote>
 
