--- a/Vezi.mw
+++ b/Vezi.mw
@@ -33,6 +33,7 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Tünäs vedes sured kalad kudodas.''
 * ''Vanh ak vinad job, laho pu vet vedab.''
 * ''Veden mödhe i vedehine löudase.''
+* ''Vedes-se vezi.'' (kaik om järgenduses; kaik om ičeze sijil)
 * ''Vezi karaižen löudab.''
 </blockquote>
 
