/* Japonankel'žed studižed al'bomad */

--- a/BTS.mw
+++ b/BTS.mw
@@ -41,7 +41,7 @@ Ezmäine rahvahidenkeskeine ''2014 BTS Live Trilogy — Episode II: The Red Bull
 * 2014 — Wake Up (''Nouze'')
 * 2016 — Youth (''Norišt'')
 * 2018 — Face Yourself (''Vastle ičtaiž'')
-* 2020 — Map of the Soul: 7 – The Journey
+* 2020 — Map of the Soul: 7 – The Journey (''Hengen kart: 7 – Matk'')
 
 == Homaičendad ==
 <references />
