--- a/Zlatoust.mw
+++ b/Zlatoust.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Zlatoustan lidnanznam
  | Flag text = Zlatoustan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 165,395
- | Voz' = 2019-01-01
+ | Eläjiden lugu = 163,919
+ | Voz' = 2020
  | Pind = 118.2
  | Fail = Zlatoust2011.jpg
- | Pämez' = Aleksei Karükov<br />(sügüz'ku 2019—.<br />''velgusentäutai'')
+ | Pämez' = Maksim Pekarskii<br />(reduku 2019—)
  | Telefonkod = +7-3513-xxx-xxx
  | Avtokod = 74. 174
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -29,11 +29,25 @@ Lidn sijadase lidnümbrikon keskuzpalas, [[Ai (jogi)|Ai-jogen]] alangišton rand
 Kahesa pen't žilod i üks' žilo raudtestancijanno mülüdas lidnümbrikho Zlatoustan ližaks. Lidnümbrikon pind — 1895 km².
 
 == Eläjad ==
-Vl 1939 lidnan ristitišt oli 99 tuhad eläjid. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 174 962 ristitud, lidnümbrikon — 177 155 ristitud. Kaikiš suremb lidnan ristitišt oli 200..208 tuhad eläjid vll 1982−1998 (208 tuh. rist. vll 1991−1992). Kaik 167 464 ristitud elädas lidnümbrikos vl 2019.
+Vl 1939 lidnan ristitišt oli 99 tuhad eläjid. Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 174 962 ristitud, lidnümbrikon — 177 155 ristitud. Kaikiš suremb lidnan ristitišt oli 200..208 tuhad eläjid vll 1982−1998 (208 tuh. rist. vll 1991−1992). Kaik 167 464 ristitud elihe lidnümbrikos vl 2019.
 
 Nened pühäpertid oma avaitud lidnas: [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] viž jumalapertid i kaks' časounäd, [[islam]]an pämečet' i Mahallä-pühäpert' nomer 938.
 
 Professionaližen opendusen aluzkundad oma Zlatoustan tehnologijan da ekonomikan tehnikum<ref>[http://www.ztte.ru/ Zlatoustan tehnologijan da ekonomikan tehnikuman sait (''ztte.ru'').] {{ref-ru}} ''(+ äikel'ne avtomatine känduz)''</ref>, Zlatoustan medicinine tehnikum, pedagogine i industrialine kolledžad, üläopendusen aluzkundoiden (Čeläbinsk, Jekaterinburg) koume filialad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник металлургу Аносову П.П..JPG|Muštnik Pavel Anosov-metallurgale (2014)
+Дом начальника горного округа.JPG|Kodirandantedištandmuzei (2013)
+Кафедральный собор Серафима Саровского.jpg|Ph. Serafim Sarovalaižen kafedraline päjumalanpert', vn 2016 nägu
+Храм во имя Святого праведного Симеона Верхотурского Чудолтворца.jpg|Ph. Simeon Verhoturjelaižen-čudonsädajan jumalanpert' läz päraudtestancijad, vn 2010 nägu
+Здание оружейной фабрики 2.JPG|Azegišton fabrikan istorine sauvuz vl 2013
+Дом городского общества (ныне часовой завод).JPG|Časuiden tegim vl 2011<br />(lidnan kundan istorine sauvuz)
+Златоуст, Таганайская улица, 2.jpg|Zlatoustan industrialine kolledž (tehnikum vl 2008)
+Здание дворца культуры машиностроителей1.JPG|Mašinansauvojiden kul'turkeskuz (2014)
+Zlatoust. The place where the Merchant's Mansion was located, Zlatoustovskaya Street, 4.jpg|«Agat»-torguimižbobuštuzkeskuz (2021)
+Zlatoust station.JPG|Zlatoust-päraudtestancijan sauvuz vl 2008
+</gallery>
 
 == Homaičendad ==
 <references />
