--- a/Snežinsk.mw
+++ b/Snežinsk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Snežinskan lidnanznam
  | Flag text = Snežinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 50,759
- | Voz' = 2017
+ | Eläjiden lugu = 51,751
+ | Voz' = 2021
  | Pind = 35
  | Fail = Площадь Ленина в г. Снежинск.jpg
  | Pämez' = Igor' Saprikin<br />(tal'vku 2015—)
@@ -24,16 +24,25 @@ Snežinsk šingotase Venäman südäitukuižkeskusel — tehnižen fizikan tedoi
 == Geografijan andmused ==
 Lidn sijadase ümbrikon pohjoižpalas, [[Uralmäged|Keskuralan]] päivnouzmaižel ezimägištol, 270 m ü.m.t. keskmäižel korktusel. Sinar-järv ({{lang-ru|Синара}}, 24 km²) om lidnan pohjoižrandaks, Silač-järv — suvirandaks ({{lang-ba|Илашты}}, 18 km²). Matkad [[Sverdlovskan agj]]ahasai om 17 km pohjoižhe orhal, [[Čeläbinsk]]hasai om 111 km suvipäivnouzmha-suvhe orhal vai 128 km avtotel. Lähembaine lidn om [[Kasli]] 22 km suvhe orhal vai 27 km avtotedme.
 
-Lidn ühtenzoitase 10-kilometrižel sarakol «[[Jekaterinburg]] — Čeläbinsk»-avtotenke. Avtonomine raudte radab Snežinskas tegimišton täht.
+Lidn ühtenzoitase kümnekilometrižel sarakol «[[Jekaterinburg]] — Čeläbinsk»-avtotenke. Avtonomine raudte radab Snežinskas tegimišton täht.
 
 Lähine Randžilo ({{lang-ru|Ближний Береговой}}, 275 rist. vl 2010) i Klüči-külä (101 rist. vl 2010) mülüdas lidnümbrikho Snežinskan ližaks. Lidnümbrikon pind — 357,36 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 48 810 ristitud, lidnümbrikon — 49 186 ristitud. Vspäi 1996 lidnan ristitišt vajehtase 48..50 tuhad eläjad röunoiš (50 500 rist. vll 2003−2005, 50 759 rist. vl 2017). Kaik 51 113 eläjad om lidnümbrikos (2017).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 48 810 ristitud, lidnümbrikon — 49 186 ristitud. Vspäi 1996 lidnan ristitišt vajehtase 48..50 tuhad eläjad röunoiš (50 500 rist. vll 2003−2005, 50 759 rist. vl 2017), kaikiš suremb ristitišt om nügüd'. Kaik 51 113 eläjad oli lidnümbrikos vl 2017.
 
 Rahvahad (2010): [[venälaižed]] — 90,4%, [[totarlaižed]] — 3,6%, [[baškiralaižed]] — 2,9%, [[ukrainalaižed]] — 1,6%, toižed rahvahad — 1,5%.
 
 Professionaližen opendusen aluzkundad oma: keskopendusen — Ozörskan tehnižen kolledžan Snežinskan filial<ref>[http://www.spt.snzsite.ru/ Ozörskan tehnižen kolledžan Snežinskan filialan sait (''spt.snzsite.ru'').] {{ref-ru}}</ref>, üläopendusen om Snežinskan fiziž-tehnine institut — Nacionaližen MIFI-südäitukuižtedoiduzkeskusen filial (MIFI-6).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Office building on Lenin Square (Snezhinsk).jpg|Lidnümbrikon administracijan sauvuz Leninan torgul (2014)
+Chapel Reigning Mother of God.JPG|Jumalanmaman «Deržavnai»-jumalaižen časoun', vn 2014 nägu
+Управление РФЯЦ ВНИИТФ.jpg|Venäman südäitukuižkeskuz — tehnižen fizikan tedoinstitut vl 2017 (ohjastusen sauvuz)
+Музыкальная школа, мозаика, стена с окнами.jpg|Lapsiden muzikškol (2017)
+СГФТА фасад 1.jpg|Snežinskan fiziž-tehnine institut (vl 2009 akademii oli)
+</gallery>
 
 == Homaičendad ==
 <references />
