--- a/Las_Vegas.mw
+++ b/Las_Vegas.mw
@@ -1,7 +1,7 @@
 {{10000}}{{A10000}}
 {{Eländpunkt
  | Nimi = Las Vegas
- | Lidnanznam =
+ | Lidnanznam = Seal of Las Vegas, Nevada.svg
  | Flag = Flag of Las Vegas, Nevada.svg
  | Lidnanznam text = Las Vegasan znam
  | Flag text = Las Vegasan flag
