--- a/Sim_(lidn,_Čeläbinskan_agj).mw
+++ b/Sim_(lidn,_Čeläbinskan_agj).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Siman lidnanznam (Venäma)
  | Flag text = Siman flag (Venäma)
  | Valdkund = Venäma
- | Eläjiden lugu = 13,170
- | Voz' = 2017
+ | Eläjiden lugu = 12,501
+ | Voz' = 2021
  | Pind = 33
  | Fail = Сим - panoramio.jpg
  | Pämez' = Aleksei Rešetov<br />(tal'vku 2015—)
@@ -34,6 +34,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 14 466 rist
 Rahvahad (2010): [[venälaižed]] — 93,5%, [[totarlaižed]] — 2,8%, [[baškiralaižed]] — 2,0%, toižed rahvahad — 1,7%.
 
 Professionaližen opendusen aluzkund om Siman mehanine tehnikum.<ref>[http://www.smt74.e-stile.ru/ Siman mehanižen tehnikuman sait (''smt74.e-stile.ru'').] {{ref-ru}} <small>''(+ äikel'ne avtomatine känduz)''</small></ref>
+[[Fail:Sim panorama.jpg|thumb|center|1000px|<center>Sim-lidnan ühthine nägu vn 2011 heinkus</center>]]
 
 == Homaičendad ==
 <references />
