*Empty MediaWiki Message*

--- a/Satk.mw
+++ b/Satk.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Satkan lidnanznam
  | Flag text = Satkan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 42,214
- | Voz' = 2017
+ | Eläjiden lugu = 41,309
+ | Voz' = 2020
  | Pind = 46.2
  | Fail = Сатка, городской пруд, лодки на приколе.jpeg
  | Pämez' = Vera Kamardina<br />(viluku 2016—)
@@ -29,7 +29,7 @@ Ural-trassan «[[Uf]] — Čeläbinsk»-pala mäneb 4 km suvipäivnouzmha lidnas
 Kümne žilod mülüdas lidnankundha Satkan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 45 178 ristitud, lidnankundan — 46 805 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli 49..51 tuhad eläjid vll 1989−2003 (51 tuh. rist. vl 1992). Vl 2017 kaik 43 812 eläjad oli lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 45 178 ristitud, lidnankundan — 46 805 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli 49..51 tuhad eläjid vll 1989−2003 (51 tuh. rist. vl 1992). Vl 2017 kaik 42 214 ristitud elihe lidnas, 43 812 eläjad oli kaikes lidnankundas.
 
 Rahvahad (2010): [[venälaižed]] — 77,9%, [[totarlaižed]] — 13,2%, [[baškiralaižed]] — 5,4%, [[ukrainalaižed]] — 1,0%, toižed rahvahad — 2,5%.
 
